[package]
name = "joinstr"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []
async = ["nostr-sdk", "tokio"]

[dependencies]
home = { workspace = true }
backoff = { workspace = true }
base64ct = { workspace = true, features = ["alloc"] }
bitcoin = { workspace = true }
bip39 = { workspace = true, features = ["rand"] }
hex-conservative = { workspace = true }
miniscript = { workspace = true, features = ["base64", "serde"] }
nostr-sdk = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
log = { workspace = true }
rand = { workspace = true }
simple_nostr_client = { workspace = true }
simple_electrum_client = { workspace = true }
native-tls = { workspace = true }

[dev-dependencies]
electrsd = { git = "https://github.com/pythcoiner/electrsd.git", branch = "buffered_logs"}
nostrd = { workspace = true }
env_logger = "0.11.6"

